# Ugly-Mug-Bot-Dev

./: Design.draw  Todo List.txt  _test_runnertest_suite.py  bot_actions.py  channel_list.json  command_handler.py  config.json  emojis.py  glob.py  log.txt  main.py  message_builder.py  mongo_connector.py  mongo_db.py  pyproject.toml  requirements.txt  sample-message-object.txt  torn_api.py  txt_log.py
_Documentation/: Design.draw  Todo List.txt
_Documentation/ZZZ_DNU/: Readme.txt  bot_actions.py  mongo_db.py
bot_actions/: __init__.py  bazaar_check.py  clear_travel_variables.py  compare_states.py  get_marks.py  message_channel.py  message_user.py  rm_message.py  send_embed.py
ext/: __init__.py
faction_tools/: __init__.py  build_comparison.py
mongo_db/: __init__.py  add_api.py  add_message.py  get_api.py  get_flight_alerts.py  get_mark.py  get_mark_collection.py  pull_api.py  rm_api.py  rm_message.py  rm_old_marks.py  update_mark.py  update_message.py  update_timestamp.py
