[tool.poetry]
name = "repl_nix_Ugly-Mug-Bot-Dev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^4.1.0"
requests = "^2.27.1"
discord = "^1.7.3"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
